--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "capitalsafi",
+    "name": "capitalsafi2",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
